# rive-godot

./: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
cmake/: glad.cmake  godot-cpp.cmake  rive-cpp.cmake  rive-renderer.cmake
cmake/rive-cpp/: rive-harfbuzz.cmake  rive-miniaudio.cmake  rive-sheenbidi.cmake
demo/: .gitignore  CMakeLists.txt  RiveControlTesting.gd  default.tscn  icon.svg.import  project.godot  test2.mtxt.import  test2.tscn
demo/addons/rive_testing/: import_plugin.gd  plugin.cfg
src/: gdextension.cpp  version.h.in
src/editor/plugin/: editor_plugin.cpp  editor_plugin.h
src/editor/plugin/import/: editor_import_plugin.cpp  editor_import_plugin.h
src/editor/plugin/inspector/drawable/: drawable_editor_inspector_plugin.cpp  drawable_editor_inspector_plugin.h  editor_resource_picker_rive_resource.cpp  editor_resource_picker_rive_resource.h  rive_drawable_picker_dialog.cpp  rive_drawable_picker_dialog.h  rive_drawable_property_editor_control.cpp  rive_drawable_property_editor_control.h
src/editor/plugin/inspector/resource/: resource_editor_inspector_plugin.cpp  resource_editor_inspector_plugin.h  resource_inspector_preview_control.cpp  resource_inspector_preview_control.h
src/editor/plugin/preview/: editor_resource_preview_generator.cpp  editor_resource_preview_generator.h
src/editor/plugin/screen/: editor_main_screen.cpp  editor_main_screen.h
src/editor/plugin/tooltip/: editor_resource_tooltip_plugin.cpp  editor_resource_tooltip_plugin.h
src/resources/: rive_drawable.cpp  rive_drawable.h  rive_resource.cpp  rive_resource.h
src/runtime/: rive_animation.cpp  rive_animation.h  rive_artboard.cpp  rive_artboard.h  rive_file.cpp  rive_file.h  rive_render_target.cpp  rive_render_target.h  rive_renderer.cpp  rive_renderer.h  rive_state_machine.cpp  rive_state_machine.h  rive_texture.cpp  rive_texture.h
src/runtime/renderers/pls/: rive_renderer_pls.cpp  rive_renderer_pls.h
src/runtime/renderers/skia/: rive_render_target_skia.cpp  rive_render_target_skia.h  rive_renderer_skia.cpp  rive_renderer_skia.h
src/runtime/renderers/skia/metal/: render_target.cpp  render_target.h
src/runtime/renderers/skia/opengl/: render_target.cpp  render_target.h
src/runtime/renderers/skia/raster/: render_target.cpp  render_target.h
src/runtime/renderers/skia/vulkan/: render_target.cpp  render_target.h
src/scene/: rive_control.cpp  rive_control.h
templates/: CMakeLists.txt  template.debug.gdextension.in  template.release.gdextension.in
vcpkg/triplets/: universal-osx.cmake
